extends base.html.twig

--- a/user_scope/templates/user/edit.html.twig
+++ b/user_scope/templates/user/edit.html.twig
@@ -1,5 +1,11 @@
-<h1>Edit users data</h1>
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button type="submit">Сохранить</button>
-{{ form_end(form) }}
+{% extends 'base.html.twig' %}
+
+{% block title %}Edit users data{% endblock %}
+
+{% block body %}
+    <h1>Edit users data</h1>
+    {{ form_start(form) }}
+        {{ form_widget(form) }}
+        <button type="submit">Save</button>
+    {{ form_end(form) }}
+{% endblock %}
