--- a/user_scope/templates/user/index.html.twig
+++ b/user_scope/templates/user/index.html.twig
@@ -1,9 +1,15 @@
-<h1>List of users</h1>
-<ul>
-    {% for user in users %}
-        <li>
-            {{ user.username }} - Роли: {{ user.roles|join(', ') }}
-            <a href="{{ path('user_edit', {'id': user.id}) }}">Редактировать</a>
-        </li>
-    {% endfor %}
-</ul>
+{% extends 'base.html.twig' %}
+
+{% block title %}List of users{% endblock %}
+
+{% block body %}
+    <h1>List of users</h1>
+    <ul>
+        {% for user in users %}
+            <li>
+                {{ user.username }} - Roles: {{ user.roles|join(', ') }}
+                <a href="{{ path('user_edit', {'id': user.id}) }}">Edit</a>
+            </li>
+        {% endfor %}
+    </ul>
+{% endblock %}
