--- a/user_scope/templates/base.html.twig
+++ b/user_scope/templates/base.html.twig
@@ -3,17 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
-
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+            <style>
+                nav { margin-bottom: 20px; }
+                nav a { margin-right: 10px; }
+            </style>
         {% endblock %}
     </head>
     <body>
+        <nav>
+        {% if app.user %}
+            <a href="{{ path('user_list') }}">List of Users</a>
+            <a href="{{ path('algorithm') }}">Results of algorithm</a>
+            <a href="{{ path('app_logout') }}">Logout</a>
+        {% endif %}
+        </nav>
+
         {% block body %}{% endblock %}
+
+        {% block javascripts %}{% endblock %}
     </body>
 </html>
