--- a/user_scope/templates/security/login.html.twig
+++ b/user_scope/templates/security/login.html.twig
@@ -1,15 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}login{% endblock %}
+{% block title %}Login{% endblock %}
+
+{% block page_styles %}
+    <link rel="stylesheet" href="{{ asset('css/login.css') }}">
+{% endblock %}
 
 {% block body %}
-    <h1>login</h1>
+    <h1>Login</h1>
     {% if error %}
-        <div style="color: red;">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="error">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
     <form method="post">
-        <label for="username">Name:</label>
+        <label for="username">Username:</label>
         <input type="text" id="username" name="_username" value="{{ last_username }}" required>
         <label for="password">Password:</label>
         <input type="password" id="password" name="_password" required>
